Fix spacing and margins
Margin is outside of the box, so putting it on the grid columns was
pushing the total row to be too big in large mode, causing the row to
break.  Needed to put the margin (and background color) in the content p
inside the grid.  Also fix the width of the third box in tablet mode to
fill the screen.

--- a/css/style.css
+++ b/css/style.css
@@ -17,23 +17,23 @@ h1 {
   font-size: 175%;
 }
 
-/*
 #container {
-  background-color: blue;
+  margin: 16px;
 }
-*/
 
 .col {
   position: relative;
-  background-color: gray;
-  /* padding is *inside* the box, so need margin
-  but margin is messing up size for large? */
-  /*margin: 10px;*/
+  xbackground-color: gray;
 }
 
 /* padded paragraph */
 .pad {
-  padding-top: 32px;
+  background-color: gray;
+  xpadding-top: 32px;
+  padding: 32px 16px 16px 16px;
+  margin: 8px;
+  border: 1px solid black;
+
 }
 
 /*.row:nth-child(2) {
@@ -42,29 +42,33 @@ h1 {
 */
 
 #p1 {
-  background-color: #A52A2A;
-  text-align: center;
-  width: 100px;
-  position: absolute;
-  right: 0;
-  font-size: 125%;
-  border: 1px solid black;
-}
-#p2 {
-  background-color: #DEB887;
-  text-align: center;
-  width: 100px;
-  position: absolute;
-  right: 0;
-  font-size: 125%;
-  border: 1px solid black;
-}
-#p3 {
   background-color: #5F9EA0;
   text-align: center;
   width: 100px;
   position: absolute;
-  right: 0;
+  top: 8px;
+  right: 8px;
+  font-size: 125%;
+  border: 1px solid black;
+}
+#p2 {
+  background-color: #A52A2A;
+  color: white;
+  text-align: center;
+  width: 100px;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  font-size: 125%;
+  border: 1px solid black;
+}
+#p3 {
+  background-color: #DEB887;
+  text-align: center;
+  width: 100px;
+  position: absolute;
+  top: 8px;
+  right: 8px;
   font-size: 125%;
   border: 1px solid black;
 }
@@ -72,14 +76,13 @@ h1 {
 /* Simple Responsive Framework. */
 .row {
   width: 100%;
-  padding: 20px;    /* TODO: not quite right */
+  xpadding: 20px;    /* TODO: not quite right */
 }
 
 /* Desktop */
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-    border: 1px solid black;
   }
   .col-lg-1 {
     width: 8.33%;
@@ -123,7 +126,6 @@ h1 {
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-    border: 1px solid black;
   }
   .col-md-1 {
     width: 8.33%;
@@ -167,7 +169,6 @@ h1 {
 @media (max-width: 767px) {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
-    border: 1px solid black;
   }
   .col-sm-1 {
     width: 8.33%;
